--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ activity = "1.10.0"
 constraintlayout = "2.2.0"
 navigationFragmentKtx = "2.8.6"
 navigationUiKtx = "2.8.6"
+intuit = "1.0.6"
+gif = "1.2.17"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -23,6 +25,9 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
+intuit-sdp = { module = "com.intuit.sdp:sdp-android", version.ref = "intuit" }
+intuit-ssp = { module = "com.intuit.ssp:ssp-android", version.ref = "intuit" }
+gif-drawable = { module = "pl.droidsonroids.gif:android-gif-drawable", version.ref = "gif" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
